Fix img overflow on audience page

--- a/src/styles/components/mm/components/_audience.scss
+++ b/src/styles/components/mm/components/_audience.scss
@@ -476,6 +476,7 @@
       }
       img{
         display: flex;
+        width:100%;
       }
   }
   &__story{
@@ -501,6 +502,9 @@
           margin-bottom: 2.25rem;
           flex: 1 1 auto;
       }
+    }
+    img{
+      width:100%;
     }
     &__content{
         display:flex;
